--- a/src/partials/page-footer.html
+++ b/src/partials/page-footer.html
@@ -1,6 +1,6 @@
 <div id="contacts" class="footer container">
     <div class="footer-contacts">
-        <a href="./index.html" class="logo link" aria-label="Логотип сайта" lang="en">
+        <a href="./index.html" class="logo link wow heartBeat" aria-label="Логотип сайта" lang="en">
             <div class="logo-main-container">
                 <span class="logo-text">Hell</span>
                 <svg class="logo-icon">
@@ -13,15 +13,15 @@
             </span>
         </a>
         <div class="contacts-container">
-            <div class="contact-phone-container">
-                <svg class="phone-icon">
+            <div class="contact-phone-container wow tada">
+                <svg class="phone-icon wow tada">
                     <use href="./images/sprite.svg#Phone"></use>
                 </svg>
                 <a href="tel:+380000000000" class="contact-phone" aria-label="Phone">
                     <span class="phone-text">+38 (000) 000 00 00</span>
                 </a>
             </div>
-            <a href="https://www.instagram.com/" class="socials-link" aria-label="Instagram">
+            <a href="https://www.instagram.com/" class="socials-link wow heartBeat" aria-label="Instagram">
                 <picture>
                     <source srcset="./images/footer/instagram.png 1x, 
                                 ./images/footer/instagram@2x.png 2x">
