--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -13,10 +13,11 @@
             <img class="photo" srcset="./images/Reviews/photo6.jpg 1x, ./images/Reviews/photo6@2x.jpg 2x"
               src="./images/Reviews/photo6.jpg" alt="Фотография создателя отзыва" width="150" height="150" />
           </picture>
-      
-          <svg class="logo-vk">
+      <a href="https://www.vk.com/">
+          <svg class="logo-vk animate__flipInX">
             <use href="./images/sprite.svg#Vk"></use>
           </svg>
+        </a>
         </div>
       
         <div class="slider-description">
@@ -43,10 +44,11 @@
             <img class="photo" srcset="./images/Reviews/photo1.jpg 1x, ./images/Reviews/photo1@2x.jpg 2x"
               src="./images/Reviews/photo1.jpg" alt="Фотография создателя отзыва" width="150" height="150" />
           </picture>
-      
-          <svg class="logo-vk" width="30" height="30">
+          <a href="https://www.vk.com/">
+          <svg class="logo-vk animate__flipInX" width="30" height="30">
             <use href="./images/sprite.svg#Vk"></use>
           </svg>
+          </a>
         </div>
       
         <div class="slider-description">
@@ -73,10 +75,11 @@
           <img class="photo" srcset="./images/Reviews/photo2.jpg 1x, ./images/Reviews/photo2@2x.jpg 2x"
             src="./images/Reviews/photo2.jpg" alt="Фотография создателя отзыва" width="150" height="150" />
         </picture>
-    
-        <svg class="logo-vk" width="30" height="30">
+        <a href="https://www.vk.com/">
+        <svg class="logo-vk animate__flipInX" width="30" height="30">
           <use href="./images/sprite.svg#Vk"></use>
         </svg>
+        </a>
       </div>
     
       <div class="slider-description">
