--- a/src/sass/components/_modal-form.scss
+++ b/src/sass/components/_modal-form.scss
@@ -30,9 +30,12 @@
     @include font(14px, 500, 22px);
     letter-spacing: 0.08em;
 
-    &:focus {
+    &:focus,
+    &:hover{
       outline: none;
       border-color: var(--accent-color);
+      box-shadow: 0px -5px 96px -14px  rgba(252, 122, 0, 0.6);
+      border-radius: 5px;
     }
   }
 
@@ -51,12 +54,11 @@
     margin-left: auto;
     margin-bottom: 10px;
 
-    border: none;
+    border:none;
     background-color: transparent;
 
     &-icon {
       stroke: var(--title-text-color);
-
       &:hover,
       &:focus {
         stroke: var(--accent-color);
