--- a/src/sass/layout/_page-footer.scss
+++ b/src/sass/layout/_page-footer.scss
@@ -50,6 +50,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  &:hover,
+  &focus{
+    animation-name: tada;
+    color: var(--accent-color);
+  animation-duration: 2000ms;
+.phone-icon{
+  animation-name: tada;
+animation-duration: 2000ms;}}
 }
 
 .phone-icon {
@@ -68,15 +76,28 @@
   letter-spacing: 0.08em;
 
   color: var(--title-text-color);
+  &:hover,
+  &focus{
+  color: var(--accent-color);
+  animation-duration: 1000ms;}
 }
 
 .socials-link {
   display: block;
+  animation-duration: 1000ms;
+  .heartBeat{
+    animation-name: heartBeat;
+  }
+  &:hover,
+  &:focus{
+    animation-name: tada;
+  }
 }
 
 .socials-icon {
   margin: 0 auto;
   padding: 0;
+ 
 }
 
 .footer-rights {
