--- a/src/sass/layout/_page-how-do.scss
+++ b/src/sass/layout/_page-how-do.scss
@@ -56,6 +56,7 @@
 .how-do-list-item:hover,
 .how-do-list-item:focus {
   background-color: var(--accent-color);
+  box-shadow: -37px -30px 59px -34px rgba(252, 153, 0, 0.6);
   & .how-do-icon,
   & .how-do-icon {
     fill: var(--primary-white-color);
