--- a/src/sass/layout/_program-section.scss
+++ b/src/sass/layout/_program-section.scss
@@ -35,6 +35,11 @@
     color: var(--primary-white-color);
     
     position: relative;
+    &:hover,
+    &:focus{
+      animation-name: heartBeat;
+      animation-duration: 1000ms;
+    }
 }
 
 
@@ -128,6 +133,11 @@
     margin-left: auto;
     background: #FFFFFF;
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+    &:hover,
+    &:focus{
+        box-shadow: 0px -5px 26px 5px rgba(224, 135, 17, 0.6);
+        border-radius: 5px;
+    }
     
 }
 
