--- a/src/sass/layout/_section-teacher.scss
+++ b/src/sass/layout/_section-teacher.scss
@@ -315,3 +315,11 @@
     height: 20px;
   }
 }
+
+.guarantee-container-list{
+  &:hover,
+  &focus{
+    box-shadow: 0px -5px 26px 5px rgba(224, 135, 17, 0.6);
+    border-radius: 5px;
+  }
+}
