--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -10,7 +10,7 @@
     <button class="modal-btn" type="button" data-modal-open>хочу на бесплатное занятие</button>
 
     <ul class="advantages-list">
-      <li class="advantages-item">
+      <li class="advantages-item wow animate__fadeInUp">
         <div class="advantages-icon-wrap">
           <svg class="advantages-icon-rectangle">
             <use href="../src/images/sprite.svg#rectangle"></use>
@@ -22,7 +22,7 @@
         <p class="advantages-text">Адаптированная авторская программа ВНО</p>
       </li>
 
-      <li class="advantages-item">
+      <li class="advantages-item wow animate__fadeInDown">
         <div class="advantages-icon-wrap">
           <svg class="advantages-icon-rectangle">
             <use href="../src/images/sprite.svg#rectangle"></use>
@@ -34,7 +34,7 @@
         <p class="advantages-text">Современные методики обучения</p>
       </li>
 
-      <li class="advantages-item">
+      <li class="advantages-item wow animate__fadeInUp">
         <div class="advantages-icon-wrap">
           <svg class="advantages-icon-rectangle">
             <use href="../src/images/sprite.svg#rectangle"></use>
