--- a/src/sass/components/_modal-btn.scss
+++ b/src/sass/components/_modal-btn.scss
@@ -23,6 +23,12 @@
     border: 2px solid var(--accent-color);
     border-radius: 5px;
     outline: none;
+      animation-name: pulse;
+      animation-duration: 1000ms;
+
+      box-shadow: 0px -5px 16px 5px rgba(252, 122, 0, 0.6);
+      border-radius: 5px;
+    
   }
 
   @media screen and (min-width: 1344px) {
