--- a/src/sass/layout/_problems.scss
+++ b/src/sass/layout/_problems.scss
@@ -38,6 +38,11 @@
     padding: 20px 14px 20px 30px;
     background-color: var(--primary-white-color);
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);   
+    &:hover,
+    &:focus{
+        box-shadow: 0px -5px 26px 5px rgba(224, 135, 17, 0.6);
+        border-radius: 5px;
+    }
     @media screen and (min-width:768px) {
     top: 188.5px;
     right: auto;    
