--- a/src/sass/layout/_registration.scss
+++ b/src/sass/layout/_registration.scss
@@ -50,7 +50,11 @@
     height: 48px;
     color: var(--primary-white-color);
     margin-bottom: 20px;
-    
+    &:hover,
+    &:focus{
+      box-shadow: 0px -5px 96px 9px rgba(252, 122, 0, 0.6);
+      border-radius: 5px;
+    }
     @media screen and(max-width:767px){
       padding-left: 28px;
      }   
@@ -85,6 +89,11 @@
        color: var(--accent-color);
        border:  2px solid var(--accent-color);
        border-radius: 5px;
+       animation-name: pulse;
+       animation-duration: 1000ms;
+       box-shadow: 0px -5px 56px 5px rgba(252, 122, 0, 0.6);
+       border-radius: 5px;
+     
      }
     }
     @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
