--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -2,8 +2,13 @@
         width: 30px;
         height: 30px;
         margin-top: 26px;
-  
+        animation-duration: 1000ms;
         cursor: pointer;
+        &:hover,
+        &:focus{
+           animation-name: animate__flipInX;
+          
+        }
         @media screen and(max-width:767px){
             margin-bottom: 24px;
         }
@@ -246,7 +251,11 @@
     border: none;
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
     margin: auto;
-
+&:hover,
+&:focus{
+    box-shadow: 0px -5px 56px 5px rgba(224, 135, 17, 0.6);
+    border-radius: 5px;
+}
 
         @media screen and (max-width:767px){
             width:280px;
@@ -367,6 +376,7 @@
     width: 183px;
     height: 54px;
     margin: 0 auto;
+    
     .item {
         width: 54px !important; 
         height: 54px !important;
