--- a/src/sass/components/_modal-window.scss
+++ b/src/sass/components/_modal-window.scss
@@ -8,8 +8,10 @@
 
   width: 280px;
   padding: 10px;
-
-  background-color: var(--primary-white-color);
+ background-image: url("../images/hero/fire.jpg");
+ background-position: center;
+ background-repeat: no-repeat;
+ background-size: cover;
 
   transition: opacity 250ms var(--cubic) 250ms;
   box-shadow: 0px -5px 96px 9px rgba(252, 122, 0, 0.6);
