--- a/src/sass/components/_modal-btn.scss
+++ b/src/sass/components/_modal-btn.scss
@@ -18,7 +18,7 @@
   background-color: var(--accent-color);
   &:hover,
   &:focus {
-    background-color: var(--primary-white-color);
+    background-color: rgba(255, 255, 255, 0.90);
     color: var(--accent-color);
     border: 2px solid var(--accent-color);
     border-radius: 5px;
