Правка телефона и transition

--- a/src/sass/_locations.scss
+++ b/src/sass/_locations.scss
@@ -79,7 +79,7 @@
   margin-right: 30px;
   padding-right: 20px;
   padding-left: 20px;
-  padding-top: 43px;
+  padding-top: 40px;
   padding-bottom: 37px;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
@@ -112,12 +112,14 @@
 .locations-item-cafe {
   border-radius: 6px;
   width: 80px;
-  height: 16px;
+  height: 20px;
   background-color: $color-products-coffe;
   text-align: center;
   border: transparent;
   color: $color-text-white;
   margin-bottom: 25px;
+  text-align: center;
+  justify-content: center;
   @media screen and (min-width: 768px) {
     height: 28px;
     font-size: 16px;
@@ -135,7 +137,7 @@
 .locations-item-food {
   border-radius: 6px;
   width: 130px;
-  height: 16px;
+  height: 20px;
   background-color: $color-products-shakes;
   text-align: center;
   border: transparent;
@@ -318,12 +320,15 @@
 
 .chicago-contact a:hover {
     color: #ffb8ca;
+    transition: 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .losangeles-contact a:hover {
     color: #ffb8ca;
+    transition: 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .newyork-contact a:hover {
     color: #ffb8ca;
+    transition: 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
