--- a/src/sass/components/_body.scss
+++ b/src/sass/components/_body.scss
@@ -8,3 +8,29 @@
 .body.modal-open{
   overflow: hidden;
 }
+
+#toTop {
+  width:70px;
+  height: 70px;
+  border-radius: 50%;
+  border: 4px solid rgba(252, 122, 0, 0.2);
+  background: transparent;
+  text-align:center;
+  padding:10px;
+  position:fixed;
+  bottom:100px;
+  right:150px;
+  cursor:pointer;
+  display:none;
+  color:rgba(252, 122, 0, 0.5);
+  font-family:verdana;
+  font-size:30px;
+
+  &:hover,
+  &:focus{
+    background:rgba(252, 122, 0, 0.9);;
+    transition: opacity 250ms var(--cubic) 250ms;
+    box-shadow: 0px -5px 96px 9px rgba(252, 122, 0, 0.6);
+    color: var(--primary-white-color);
+  }
+ }
