--- a/src/sass/components/_body.scss
+++ b/src/sass/components/_body.scss
@@ -18,8 +18,6 @@
   text-align:center;
   padding:10px;
   position:fixed;
-  bottom:100px;
-  right:150px;
   cursor:pointer;
   display:none;
   color:rgba(252, 122, 0, 0.5);
@@ -33,4 +31,17 @@
     box-shadow: 0px -5px 96px 9px rgba(252, 122, 0, 0.6);
     color: var(--primary-white-color);
   }
+
+
+ @media screen and(max-width:767px){
+  bottom: 30px;
+  right: 10px;
+ } 
+ @media screen and(max-width:1343px){
+  bottom: 60px;
+  right: 50px;
  }
+ @media screen and(min-width:1344px){
+  bottom: 100px;
+  right: 100px;
+ }}
