--- a/src/sass/components/_body.scss
+++ b/src/sass/components/_body.scss
@@ -10,19 +10,18 @@
 }
 
 #toTop {
-  width:70px;
-  height: 70px;
+
   border-radius: 50%;
   border: 4px solid rgba(252, 122, 0, 0.2);
   background: transparent;
   text-align:center;
-  padding:10px;
+  
   position:fixed;
   cursor:pointer;
   display:none;
   color:rgba(252, 122, 0, 0.5);
   font-family:verdana;
-  font-size:30px;
+  // font-size:30px;
 
   &:hover,
   &:focus{
@@ -34,14 +33,27 @@
 
 
  @media screen and(max-width:767px){
+
   bottom: 30px;
   right: 10px;
+  width:40px;
+  height: 40px;
+  padding:2px;
+  // font-size:20px;
  } 
- @media screen and(max-width:1343px){
+ @media screen and(min-width:768px){
+  width:50px;
+  height: 50px;
   bottom: 60px;
   right: 50px;
+  padding:5px;
+
  }
  @media screen and(min-width:1344px){
+  width:70px;
+  height: 70px;
   bottom: 100px;
   right: 100px;
+  padding: 10px;
+  font-size: 30px;
  }}
