--- a/src/sass/components/_modal-btn.scss
+++ b/src/sass/components/_modal-btn.scss
@@ -5,7 +5,7 @@
   min-height: 48px;
   min-width: 260px;
 
-  border: 0;
+  border: 2px solid var(--accent-color);
 
   cursor: pointer;
   transition: color 250ms var(--cubic), background-color 250ms var(--cubic);
@@ -16,19 +16,13 @@
 
   color: var(--primary-white-color);
   background-color: var(--accent-color);
+
   &:hover,
   &:focus {
-    background-color: rgba(255, 255, 255, 0.90);
+    background-color: rgba(255, 255, 255, 0.9);
     color: var(--accent-color);
-    border: 2px solid var(--accent-color);
-    border-radius: 5px;
     outline: none;
-      animation-name: pulse;
-      animation-duration: 1000ms;
-
-      box-shadow: 0px -5px 16px 5px rgba(252, 122, 0, 0.6);
-      border-radius: 5px;
-    
+    border-color: var(--accent-color);
   }
 
   @media screen and (min-width: 1344px) {
