--- a/src/sass/components/_body.scss
+++ b/src/sass/components/_body.scss
@@ -5,54 +5,51 @@
   color: var(--title-text-color);
   background-color: var(--primary-background-color);
 }
-.body.modal-open{
+.body.modal-open {
   overflow: hidden;
 }
 
 #toTop {
-
   border-radius: 50%;
   border: 4px solid rgba(252, 122, 0, 0.2);
   background: transparent;
-  text-align:center;
-  
-  position:fixed;
-  cursor:pointer;
-  color:rgba(252, 122, 0, 0.5);
-  font-family:verdana;
+  text-align: center;
+
+  position: fixed;
+  cursor: pointer;
+  color: rgba(252, 122, 0, 0.5);
+  font-family: verdana;
   // font-size:30px;
 
   &:hover,
-  &:focus{
-    background:rgba(252, 122, 0, 0.9);;
+  &:focus {
+    background: rgba(252, 122, 0, 0.9);
     transition: opacity 250ms var(--cubic) 250ms;
     box-shadow: 0px -5px 96px 9px rgba(252, 122, 0, 0.6);
     color: var(--primary-white-color);
   }
 
-
- @media screen and(max-width:767px){
-
-  bottom: 30px;
-  right: 10px;
-  width:40px;
-  height: 40px;
-  padding:2px;
-  // font-size:20px;
- } 
- @media screen and(min-width:768px){
-  width:50px;
-  height: 50px;
-  bottom: 60px;
-  right: 50px;
-  padding:5px;
-
- }
- @media screen and(min-width:1344px){
-  width:70px;
-  height: 70px;
-  bottom: 100px;
-  right: 100px;
-  padding: 10px;
-  font-size: 30px;
- }}
+  @media screen and(max-width:767px) {
+    bottom: 30px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    padding: 2px;
+    // font-size:20px;
+  }
+  @media screen and(min-width:768px) {
+    width: 50px;
+    height: 50px;
+    bottom: 60px;
+    right: 50px;
+    padding: 5px;
+  }
+  @media screen and(min-width:1344px) {
+    width: 70px;
+    height: 70px;
+    bottom: 100px;
+    right: 100px;
+    padding: 10px;
+    font-size: 30px;
+  }
+}
