--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,23 @@
-/*
- * Главный файл стилей.
- * Все паршалы подключаются сюда.
- */
-
-// Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './utils/mixins';
+@import './utils/placeholders';
+@import './utils/variables';
+@import './utils/visualy-hidden';
+@import './base/common';
+@import './base/container';
+@import './components/backdrop';
+@import './components/btn';
+@import './components/contacts';
+@import './components/forms';
+@import './components/logo';
+@import './components/menu';
+@import './components/modal';
+@import './components/social';
+@import './layout/about';
+@import './layout/advantages';
+@import './layout/clients';
+@import './layout/footer';
+@import './layout/header';
+@import './layout/hero';
+@import './layout/price';
+@import './layout/team';
+@import './layout/works';
