--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,32 @@
-/*
- * Главный файл стилей.
- * Все паршалы подключаются сюда.
- */
+// UTILS
+@import './utils/variables';
+@import './utils/mixins';
+@import './utils/placeholders';
+@import './utils/_visual-hidden';
 
-// Стили для файла с примером HTML-фрагмента
-@import './example';
+// BASE
+
+@import './base/common';
+@import './base/container';
+
+// COMPONENTS
+
+@import './components/logo';
+@import './components/menu';
+@import './components/mobile-menu';
+@import './components/button';
+@import './components/social-link';
+@import './components/modal';
+@import './components/title';
+
+// LAYOUT
+
+@import './layout/page-header';
+@import './layout/hero';
+@import './layout/about';
+@import './layout/prices';
+@import './layout/advantages';
+@import './layout/masters';
+@import './layout/gallery';
+@import './layout/footer-contacts';
+@import './layout/footer';
