--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -34,3 +34,12 @@ img {
   font-style: normal;
   text-decoration: none;
 }
+.title {
+  font-family: Raleway, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.167;
+  letter-spacing: 0.05em;
+  color: #303030;
+}
