--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,11 +13,12 @@
 
 @import './components/logo';
 @import './components/menu';
+@import './components/title';
 @import './components/mobile-menu';
 @import './components/button';
 @import './components/social-link';
 @import './components/modal';
-@import './components/title';
+@import './components/form';
 
 // LAYOUT
 
