--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -40,3 +40,18 @@ body {
 
   color: var(--primary-text-color);
 }
+
+.section {
+  padding-top: 84px;
+  padding-bottom: 84px;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 130px;
+    padding-bottom: 130px;
+  }
+}
