--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -3,10 +3,74 @@
     <div class="aboute-left">
       <ul class="left-list">
         <li class="left-item">
-          <img src="" alt="" />
+          <picture>
+            <source
+              srcset="
+                ./images/portfolio/portfolio-desktop/portfolio-desktop-01.webp    1x,
+                ./images/portfolio/portfolio-desktop/portfolio-desktop-01@2x.webp 2x
+              "
+              media="(min-width: 1200px)"
+              type="img/webp"
+            />
+            <source
+              srcset="
+                ./images/portfolio/portfolio-desktop/portfolio-desktop-01.jpg    1x,
+                ./images/portfolio/portfolio-desktop/portfolio-desktop-01@2x.jpg 2x
+              "
+              media="(min-width: 1200px)"
+            />
+            <source
+              srcset="
+                ./images/portfolio/portfolio-tablet/portfolio-tablet-01.webp    1x,
+                ./images/portfolio/portfolio-tablet/portfolio-tablet-01@2x.webp 2x
+              "
+              media="(min-width: 768px)"
+              type="img/webp"
+            />
+            <source
+              srcset="
+                ./images/portfolio/portfolio-tablet/portfolio-tablet-01.jpg    1x,
+                ./images/portfolio/portfolio-tablet/portfolio-tablet-01@2x.jpg 2x
+              "
+              media="(min-width: 768px)"
+            />
+            <img src="" alt="" />
+          </picture>
         </li>
         <li class="left-item">
-          <img src="" alt="" />
+          <picture>
+            <source
+              srcset="
+                ./images/portfolio/portfolio-desktop/portfolio-desktop-01.webp    1x,
+                ./images/portfolio/portfolio-desktop/portfolio-desktop-01@2x.webp 2x
+              "
+              media="(min-width: 1200px)"
+              type="img/webp"
+            />
+            <source
+              srcset="
+                ./images/portfolio/portfolio-desktop/portfolio-desktop-01.jpg    1x,
+                ./images/portfolio/portfolio-desktop/portfolio-desktop-01@2x.jpg 2x
+              "
+              media="(min-width: 1200px)"
+            />
+            <source
+              srcset="
+                ./images/portfolio/portfolio-tablet/portfolio-tablet-01.webp    1x,
+                ./images/portfolio/portfolio-tablet/portfolio-tablet-01@2x.webp 2x
+              "
+              media="(min-width: 768px)"
+              type="img/webp"
+            />
+            <source
+              srcset="
+                ./images/portfolio/portfolio-tablet/portfolio-tablet-01.jpg    1x,
+                ./images/portfolio/portfolio-tablet/portfolio-tablet-01@2x.jpg 2x
+              "
+              media="(min-width: 768px)"
+            />
+            <img src="" alt="" />
+          </picture>
         </li>
       </ul>
     </div>
