спросил стили, доделал about

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,75 +1,75 @@
 <section class="section" id="aboute">
-  <div class="container">
+  <div class="container aboute-container">
     <div class="aboute-left">
-      <ul class="left-list">
+      <ul class="left-list list">
         <li class="left-item">
           <picture>
             <source
               srcset="
-                ./images/portfolio/portfolio-desktop/portfolio-desktop-01.webp    1x,
-                ./images/portfolio/portfolio-desktop/portfolio-desktop-01@2x.webp 2x
+                ./img/about/about-decktop-01.webp    1x,
+                ./img/about/about-decktop-01@2x.webp 2x
               "
               media="(min-width: 1200px)"
               type="img/webp"
             />
             <source
               srcset="
-                ./images/portfolio/portfolio-desktop/portfolio-desktop-01.jpg    1x,
-                ./images/portfolio/portfolio-desktop/portfolio-desktop-01@2x.jpg 2x
+                ./img/about/about-decktop-01.jpg    1x,
+                ./img/about/about-decktop-01@2x.jpg 2x
               "
               media="(min-width: 1200px)"
             />
             <source
               srcset="
-                ./images/portfolio/portfolio-tablet/portfolio-tablet-01.webp    1x,
-                ./images/portfolio/portfolio-tablet/portfolio-tablet-01@2x.webp 2x
+                ./img/about/about-tablet-01.webp    1x,
+                ./img/about/about-tablet-01@2x.webp 2x
               "
               media="(min-width: 768px)"
               type="img/webp"
             />
             <source
               srcset="
-                ./images/portfolio/portfolio-tablet/portfolio-tablet-01.jpg    1x,
-                ./images/portfolio/portfolio-tablet/portfolio-tablet-01@2x.jpg 2x
+                ./img/about/about-tablet-01.jpg    1x,
+                ./img/about/about-tablet-01@2x.jpg 2x
               "
               media="(min-width: 768px)"
             />
-            <img src="" alt="" />
+            <img src="./img/about/about-tablet-01.jpg" alt="" />
           </picture>
         </li>
         <li class="left-item">
           <picture>
             <source
               srcset="
-                ./images/portfolio/portfolio-desktop/portfolio-desktop-01.webp    1x,
-                ./images/portfolio/portfolio-desktop/portfolio-desktop-01@2x.webp 2x
+                ./img/about/about-decktop-02.webp    1x,
+                ./img/about/about-decktop-02@2x.webp 2x
               "
               media="(min-width: 1200px)"
               type="img/webp"
             />
             <source
               srcset="
-                ./images/portfolio/portfolio-desktop/portfolio-desktop-01.jpg    1x,
-                ./images/portfolio/portfolio-desktop/portfolio-desktop-01@2x.jpg 2x
+                ./img/about/about-decktop-02.jpg    1x,
+                ./img/about/about-decktop-02@2x.jpg 2x
               "
               media="(min-width: 1200px)"
             />
             <source
               srcset="
-                ./images/portfolio/portfolio-tablet/portfolio-tablet-01.webp    1x,
-                ./images/portfolio/portfolio-tablet/portfolio-tablet-01@2x.webp 2x
+                ./img/about/about-tablet-02.webp    1x,
+                ./img/about/about-tablet-02@2x.webp 2x
               "
               media="(min-width: 768px)"
               type="img/webp"
             />
             <source
               srcset="
-                ./images/portfolio/portfolio-tablet/portfolio-tablet-01.jpg    1x,
-                ./images/portfolio/portfolio-tablet/portfolio-tablet-01@2x.jpg 2x
+                ./img/about/about-tablet-02.jpg    1x,
+                ./img/about/about-tablet-02@2x.jpg 2x
               "
               media="(min-width: 768px)"
             />
-            <img src="" alt="" />
+            <img src="./img/about/about-tablet-02.jpg" alt="" />
           </picture>
         </li>
       </ul>
@@ -77,7 +77,7 @@
     <div class="aboute-right">
       <p class="suptitle">о нас</p>
       <h2 class="title">Лучший Барбершоп твоего города</h2>
-      <ul class="right-list">
+      <ul class="right-list list">
         <li class="right-item">
           <p class="aboute-text">
             Если ты хочешь добавить в свой образ больше уверенности – тебе точно
@@ -94,6 +94,8 @@
           </p>
         </li>
       </ul>
+
+      <button type="button" class="btn">онлайн-запись</button>
     </div>
   </div>
 </section>
