--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -1,16 +1,21 @@
+.aboute-container {
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+}
+
 .aboute-left {
   @media screen and (max-width: 767px) {
     display: none;
   }
 }
-.right-item {
-  margin-bottom: 20px;
-}
+
 .left-list {
   @media screen and (min-width: 1200px) {
     display: flex;
   }
 }
+
 .left-item {
   @media screen and (max-width: 1999px) {
     &:not(:last-child) {
@@ -23,6 +28,24 @@
     }
   }
 }
+
 .second-text {
   margin-bottom: 40px;
+}
+
+.aboute-right {
+  max-width: 464px;
+
+  @media screen and (min-width: 768px) {
+    margin-left: 30px;
+    max-width: 320px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    max-width: 505px;
+  }
+}
+
+.right-item {
+  margin-bottom: 20px;
 }
