--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -89,7 +89,7 @@ body {
   padding-right: 15px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .container {
     width: 480px;
   }
@@ -98,6 +98,8 @@ body {
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 
@@ -133,14 +135,16 @@ body {
   color: var(--secondary-text-color);
 }
 
+@media screen and (min-width: 768px) {
+  .aboute-container {
+    display: flex;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .aboute-left {
     display: none;
   }
-}
-
-.right-item {
-  margin-bottom: 20px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -163,5 +167,26 @@ body {
 
 .second-text {
   margin-bottom: 40px;
+}
+
+.aboute-right {
+  max-width: 464px;
+}
+
+@media screen and (min-width: 768px) {
+  .aboute-right {
+    margin-left: 30px;
+    max-width: 320px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .aboute-right {
+    max-width: 505px;
+  }
+}
+
+.right-item {
+  margin-bottom: 20px;
 }
 /*# sourceMappingURL=main.css.map */
