--- a/src/sass/components/_title.scss
+++ b/src/sass/components/_title.scss
@@ -5,6 +5,7 @@
   line-height: 1.178;
   letter-spacing: 0.05em;
   color: var(--secondary-text-color);
+
   @media screen and (min-width: 1200px) {
     font-size: 42px;
     line-height: 1.166;
@@ -18,4 +19,24 @@
   letter-spacing: 0.1em;
   text-transform: uppercase;
   color: var(--secondary-text-color);
+
+  &::before {
+    content: '';
+    display: inline-block;
+    height: 1px;
+    width: 60px;
+    margin-right: 20px;
+    vertical-align: middle;
+    background: var(--secondary-text-color);
+  }
+
+  &.dark-line::before {
+    content: '';
+    display: inline-block;
+    height: 1px;
+    width: 60px;
+    margin-right: 20px;
+    vertical-align: middle;
+    background: var(--additional-text-color);
+  }
 }
