fixed div left side

--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -2,7 +2,7 @@
   .about {
     padding: 84px 0;
 
-    &-list {
+    &-left-side {
       display: none;
     }
   }
@@ -56,30 +56,29 @@
   color: #555555;
 }
 
+@media screen and (min-width: 768px) {
+  .about {
+    padding: 100px 0;
+
+    &-wrapper {
+      display: flex;
+    }
+    &-left-side {
+      width: 50%;
+      margin-right: 30px;
+    }
+    &-second-list {
+      // display: block;
+      width: 50%;
+    }
+  }
+}
 @media screen and (max-width: 1200px) {
   .about {
     &-item {
       &:not(:last-child) {
         margin-bottom: 30px;
       }
-    }
-  }
-}
-@media screen and (min-width: 768px) {
-  .about {
-    padding: 100px 0;
-
-    &-list {
-      display: block;
-      width: 50%;
-      margin-right: 30px;
-    }
-    &-second-list {
-      display: block;
-      width: 50%;
-    }
-    &-wrapper {
-      display: flex;
     }
   }
 }
@@ -99,6 +98,7 @@
     &-list {
       display: flex;
     }
+
     &-item {
       &:not(:last-child) {
         margin-right: 30px;
