--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -8,7 +8,7 @@
   }
 }
 
-.about-second-text {
+.about-text {
   position: relative;
   margin-bottom: 20px;
   font-style: normal;
@@ -22,7 +22,7 @@
   color: #303030;
 }
 
-.about-second-text::before {
+.about-text::before {
   display: block;
   position: absolute;
   content: '';
@@ -33,12 +33,12 @@
   left: 0;
 }
 
-.about-second-headline {
+.about-headline {
   font-size: 28px;
   line-height: 1.178;
   margin-bottom: 20px;
 }
-.about-second-description {
+.about-description {
   margin-bottom: 20px;
   font-size: 16px;
   font-weight: 400;
@@ -47,7 +47,7 @@
   color: #555555;
 }
 
-.about-second-description-text {
+.about-description-text {
   margin-bottom: 40px;
   font-style: normal;
   font-size: 14px;
@@ -68,7 +68,6 @@
       margin-right: 30px;
     }
     &-second-list {
-      // display: block;
       width: 50%;
     }
   }
@@ -87,11 +86,11 @@
   .about {
     padding: 130px 0;
 
-    &-second-description {
+    &-description {
       font-size: 18px;
     }
 
-    &-second-headline {
+    &-headline {
       font-size: 42px;
     }
 
@@ -104,7 +103,7 @@
         margin-right: 30px;
       }
     }
-    &-second-item {
+    &-second-list {
       padding: 0 35px 0 45px;
     }
   }
