Done section-team

--- a/src/sass/layout/_team.scss
+++ b/src/sass/layout/_team.scss
@@ -1,1 +1,91 @@
-
+.team-section {
+  background: #f7f7f7;
+  padding-top: 84px;
+  padding-bottom: 20px;
+}
+.team-section-suptitle {
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.364;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #303030;
+  margin-bottom: 20px;
+}
+.team-section-suptitle::before {
+  display: inline-block;
+  content: '';
+  width: 60px;
+  height: 1px;
+  margin-right: 20px;
+  background: #303030;
+}
+.team-section-title {
+  padding-bottom: 44px;
+}
+.team-list-img {
+  width: 100%;
+  padding-bottom: 30px;
+}
+.team-list-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.team-list-position {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.357;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #ff6c00;
+}
+.team-list-name {
+  padding-bottom: 8px;
+}
+.team-list-position {
+  padding-bottom: 30px;
+}
+.social-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 64px;
+}
+.social-list-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
+}
+.social-list-item:not(:last-child) {
+  margin-right: 10px;
+}
+.social-list-icon {
+  width: 20px;
+  height: 20px;
+}
+@media screen and (min-width: 1200px) {
+  .team-list {
+    display: flex;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+  .team-list-item {
+    margin-top: 30px;
+    margin-left: 30px;
+    width: calc(100% / 3 - 30px);
+  }
+  .team-section {
+    padding-top: 130px;
+    padding-bottom: 130px;
+  }
+}
