адаптирована секция под desktop

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -12,7 +12,24 @@
   text-align: center;
   margin-bottom: 44px;
 }
-.contact-form-field {
+// .contact-form-field {
+//   // font-weight: 600;
+//   // font-size: 11px;
+//   // line-height: 1.36;
+//   // letter-spacing: 0.1em;
+//   // text-transform: uppercase;
+//   // color: rgba(157, 164, 189, 0.4);
+// }
+
+.contacts-input {
+  display: block;
+  width: 100%;
+  height: 24px;
+  fill: currentColor;
+  background-color: transparent;
+
+  border: rgba(157, 164, 189, 0.4);
+  outline: 1px solid red;
   font-weight: 600;
   font-size: 11px;
   line-height: 1.36;
@@ -20,10 +37,69 @@
   text-transform: uppercase;
   color: rgba(157, 164, 189, 0.4);
 }
+
+.contacts-input-message {
+  resize: none;
+  height: 76px;
+}
+
+// .modal-button {
+//   margin-left: auto;
+//   margin-right: auto;
+//   padding: 12px 20px;
+//   margin-top: 44px;
+//   border-radius: 25px;
+//   min-width: 160px;
+//   height: 40px;
+//   font-weight: 600;
+//   font-size: 12px;
+//   line-height: 1.33;
+//   letter-spacing: 0.09em;
+//   text-transform: uppercase;
+//   color: #ffffff;
+//   text-align: center;
+//   background-color: transparent;
+//   border: 1px solid #ff6c00;
+//   cursor: pointer;
+//   outline: none;
+
+//   &:hover,
+//   &:focus {
+//     background-color: var(--accent-color);
+//   }
+// }
+.send-button {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 12px 20px;
+  margin-top: 44px;
+  border-radius: 25px;
+  min-width: 160px;
+  height: 40px;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.09em;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-align: center;
+  background-color: transparent;
+  border: 1px solid #ff6c00;
+  cursor: pointer;
+  outline: none;
+
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
+}
 .contact-info {
   padding-top: 84px;
   padding-bottom: 84px;
   background-color: #191c26;
+  background-image: url('../images/contacts/contacts-bg.png');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .contact-info-addres {
   margin-bottom: 44px;
@@ -54,6 +130,8 @@
   color: #9da4bd;
 }
 .suptitle {
+  display: flex;
+  align-items: center;
   font-style: normal;
   font-weight: 600;
   font-size: 11px;
@@ -62,17 +140,74 @@
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 20px;
-  text-align: center;
 }
 .suptitle::before {
+  display: inline-block;
   content: '';
-  width: 1px;
-  height: 60px;
+  width: 60px;
+  height: 1px;
   background: rgba(157, 164, 189, 0.4);
-  outline: 1px solid red;
+  margin-right: 20px;
 }
 
 .contact-icon {
-  fill: currentColor;
+  flex-shrink: 0;
+  width: 24px;
+  height: 24px;
   margin-right: 20px;
+}
+
+.contact-list-icon-map-pin {
+  align-self: flex-start;
+  margin-top: 6px;
+}
+
+@media screen and (min-width: 768px) {
+  .contact-info-title {
+    text-align: left;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contact-wrapper {
+    display: flex;
+  }
+  .contact-form,
+  .contact-info {
+    padding-top: 130px;
+    padding-bottom: 130px;
+    width: 50%;
+  }
+
+  .form-field {
+    // flex-direction: row;
+    // flex-wrap: wrap;
+  }
+
+  .contacts-input + .contacts-input {
+    margin-right: 30px;
+  }
+
+  .send-button {
+    margin-left: 0;
+  }
+
+  .contact-list-link {
+    display: flex;
+    align-items: center;
+  }
+  .contact-list {
+    max-width: 260px;
+  }
+  .contact-info {
+    padding-left: 100px;
+  }
+  .contact-form {
+    padding-left: 56px;
+  }
+  .contacn-form-title {
+    text-align: left;
+  }
+  .contacts-input-message {
+    margin-top: 44px;
+  }
 }
