--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,20 +1,48 @@
-<div class="">
+<div class="contact-wrapper">
   <section class="container contact-form">
     <form action="#" class="form-field">
       <h2 class="contacn-form-title title">Онлайн-запись</h2>
-      <label for="" class="contact-form-field">Имя* </label>
-      <label for="" class="contact-form-field">Телефон* </label>
-      <label for="" class="contact-form-field">сообщение </label>
+      <label for="" class="contact-form-field">
+        <input
+          class="contacts-input"
+          type="text"
+          name="name"
+          id="name"
+          minlength="2"
+          placeholder="Имя*"
+        />
+      </label>
+      <label for="" class="contact-form-field">
+        <input
+          class="contacts-input"
+          type="tel"
+          name="tel"
+          id="tel"
+          pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+          placeholder="Телефон*"
+        />
+      </label>
+      <label for="" class="contact-form-field">
+        <textarea
+          class="contacts-input contacts-input-message"
+          name=""
+          id=""
+          cols=""
+          rows=""
+          placeholder="сообщение"
+        ></textarea>
+      </label>
+      <button class="send-button" type="submit">отправить</button>
     </form>
   </section>
 
   <section class="container contact-info">
     <h2 class="contact-info-title title">Контакты</h2>
     <address class="contact-info-addres address">
-      <ul>
+      <ul class="contact-list">
         <li class="contact-list-item list">
           <a class="contact-list-link link" href="">
-            <svg class="contact-icon" width="16" height="18">
+            <svg class="contact-icon contact-list-icon-map-pin">
               <use href="./images/sprite.svg/#icon-map-pin"></use>
             </svg>
             ул. Васильковая, 7А, Киев, 08132</a
@@ -23,7 +51,7 @@
 
         <li class="contact-list-item list">
           <a class="contact-list-link link" href="tel:+380441111111"
-            ><svg class="contact-icon" width="16" height="16">
+            ><svg class="contact-icon">
               <use href="./images/sprite.svg/#icon-phone"></use>
             </svg>
             +38 044 111 11 11
@@ -31,7 +59,7 @@
         </li>
         <li class="contact-list-item list">
           <a class="contact-list-link" href="mailto:barbershop@email.com">
-            <svg class="contact-icon" width="18" height="14">
+            <svg class="contact-icon">
               <use href="./images/sprite.svg/#icon-mail"></use>
             </svg>
             barbershop@email.com</a
@@ -39,7 +67,10 @@
         </li>
       </ul>
     </address>
-    <p class="suptitle">время работы</p>
-    <p class="contact-date">Ежедневно с 9:00 до 22:00</p>
+
+    <div class="contact-date-wraper">
+      <p class="suptitle">время работы</p>
+      <p class="contact-date">Ежедневно с 9:00 до 22:00</p>
+    </div>
   </section>
 </div>
