--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -29,16 +29,30 @@
   }
 }
 
+.about-title {
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.178;
+  letter-spacing: 0.05em;
+  color: var(--secondary-text-color);
+
+  @media screen and (min-width: 1200px) {
+    font-size: 42px;
+    line-height: 1.166;
+  }
+}
+
 .second-text {
   margin-bottom: 40px;
 }
 
 .aboute-right {
-  max-width: 464px;
+  max-width: 400px;
 
   @media screen and (min-width: 768px) {
     margin-left: 30px;
-    max-width: 320px;
+    max-width: 330px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -48,4 +62,23 @@
 
 .right-item {
   margin-bottom: 20px;
+}
+
+.aboute-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.625;
+  letter-spacing: 0.02em;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 18px;
+    line-height: 1.666;
+  }
+}
+
+.second-text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.857;
+  letter-spacing: 0.02em;
 }
