gallery suptitle::before

--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -10,9 +10,10 @@
 
 .gallery .suptitle {
   margin-bottom: 44px;
+  display: inline-flex;
+  align-items: center;
 
   &::before {
-    display: inline-block;
     content: '';
     width: 60px;
     height: 1px;
