HEADER (DESKTOP,MOBILE,TABLET)

--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -1,11 +1,24 @@
 <header class="header">  
     <div class="container">
-               
-                <svg class="logo-icon" width="68" height="56">
-                    <use href="./images/logo/sprite.svg#icon-logo"></use> 
-                </svg>
+             <div class="header-top">
+                 <ul class="contact-list-header list">
+                     <li class="contact-item-header">
+                         <a href="tel" class="contact-link-header link">+38 044 111 11 11</a>
+                     </li>
+                     <li class="contact-item-header">
+                         <a href="email" class="contact-link-header link">barbershop@email.com</a>
+                     </li>
+                 </ul>
+             </div>
 
+             <div class="header-bottom">
                 <nav class="menu">
+
+                    <svg class="logo-icon" width="68" height="56">
+                        <use href="./images/logo/sprite.svg#icon-logo"></use> 
+                    </svg>
+    
+
                 <ul class="list-menu list">
                     <li class="list-menu-item">
                         <a href="" class="list-menu-link link">О нас</a>
@@ -20,16 +33,16 @@
                         <a href="" class="list-menu-link link">Контакты</a>
                     </li>
                 </ul>    
-            </nav>
-            <button class="burger">
-                <svg class="icon-burger" width="40" height="40">
-                    <use href="./images/logo/sprite.svg#icon-burger"></use>
-                </svg>
+
+                <button class="burger">
+                    <svg class="icon-burger" width="40" height="40">
+                        <use href="./images/logo/sprite.svg#icon-burger"></use>
+                    </svg>
                 </button>
-            <div class="contact-header">
-                <button class="btn">Онлайн-запись</button>
-                <a href="tel" class="tel-header link">+38 044 111 11 11</a>
-            </div>
+            </nav>
+
+            <button class="btn" data-modal-open>Онлайн-запись</button>
+        </div>
         </div>      
     </div>  
 </header>
