--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -30,14 +30,21 @@
 }
 
 
-.burger{
-    background: transparent;
-    border: none;
-    padding: 0;
-}
-@media screen and(min-width:768px){
-    .burger{
-        display: none;
-    }
+@media screen and (max-width:767px){
+  .btn{
+   display: none;
+  } 
 }
 
+@media screen and(min-width:320px){
+  .burger{
+    border: none;
+    background: transparent;
+    padding: 0;
+  }
+}
+@media screen and(min-width:768px){
+  .burger{
+    display: none;
+  }
+}
