--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -1,17 +1,54 @@
 .menu{
     display: flex;
+    justify-content: space-between;
 }
-
-.list-menu{
-    display: flex;
-    align-items: center;
-    margin-left: 64px;
-}
-
-.contact-header{
-    margin-left: 47px;
-    & .tel-header {
-        display: block;
-        margin-top: 20px;
+@media screen and(min-width:320px) and(max-width:767px){
+    .list-menu{
+        display: none;
     }
+}
+@media screen and(min-width:768px){
+    .menu{
+        margin-right: auto;
+    }
+    .list-menu{
+        display: flex;
+        align-items: center;
+        margin-left: 64px;
+        margin-right: auto;
+
+        & .list-menu-item{
+
+            &:not(:first-child){
+            margin-left: 24px;
+            }
+
+            & .list-menu-link{
+                font-size: 12px;
+                font-weight: 600;
+                line-height: 1.333;
+                letter-spacing: 0.01em;
+                // color: var(--white-color);
+            }
+        }
+    }
+}
+
+@media screen and(min-width:1200px){
+    .list-menu{
+        margin-left: 150px;
+        
+            & .list-menu-item{
+
+                &:not(:first-child){
+                margin-left: 30px;
+                }
+
+                & .list-menu-link{
+                    font-size: 14px;
+                }
+            }         
+        }
+    
+        
 }
