--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -41,7 +41,7 @@
                 </button>
             </nav>
 
-            <button class="btn" data-modal-open>Онлайн-запись</button>
+            <button class="btn" data-menu-open>Онлайн-запись</button>
         </div>
         </div>      
     </div>  
