--- a/src/sass/components/_title.scss
+++ b/src/sass/components/_title.scss
@@ -14,8 +14,10 @@
     color: var(--secondary-text-color);
   }
 
-  &.contacts-title {
+  &.footer-title {
     margin-bottom: 40px;
+    text-align: center;
+    color: var(--white-color);
   }
 }
 
