добавлены иконки в контакт лиси хедера

--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -33,9 +33,7 @@
             & .contact-item-header{
 
                 &:not(:first-child){
-                    margin-left: 10px;
-                    border-left: 1px solid var(--primary-text-color);
-                    padding-left: 10px;
+                    margin-left: 20px;
                 }
 
                & .contact-link-header{
@@ -45,10 +43,18 @@
                 letter-spacing: 0.01em;
                 color: var(--primary-text-color);
 
+                display: flex;
+                align-items: center;
+
                     &:focus,
                     &:hover{
                         color: var(--accent-color);
                     }
+
+                & .icon-mail{
+                    fill: silver;
+                    margin-right: 10px;
+                }    
                }
             }
         }
