--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -7,10 +7,14 @@
 
   @media screen and (min-width: 320px) {
     max-width: 480px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
   @media screen and (min-width: 768px) {
     max-width: 768px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 
   @media screen and (min-width: 1200px) {
