--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -33,7 +33,7 @@
   .gallery-list-item {
     margin-top: 30px;
     margin-left: 30px;
-    width: calc(100% / 2 - 30px);
+    flex-basis: calc(100% / 2 - 30px);
   }
 }
 
@@ -48,6 +48,6 @@
   .gallery-list-item {
     margin-top: 30px;
     margin-left: 30px;
-    width: calc(100% / 4 - 30px);
+    flex-basis: calc(100% / 4 - 30px);
   }
 }
