--- a/css/main.css
+++ b/css/main.css
@@ -172,8 +172,10 @@ body {
   color: var(--secondary-text-color);
 }
 
-.title.contacts-title {
+.title.footer-title {
   margin-bottom: 40px;
+  text-align: center;
+  color: var(--white-color);
 }
 
 @media screen and (max-width: 1199px) {
@@ -300,6 +302,7 @@ body {
     padding-top: 0;
   }
   .header-top {
+    padding-top: 5px;
     width: 100%;
   }
   .header-top .contact-list-header {
@@ -334,7 +337,6 @@ body {
 
 @media screen and (min-width: 1200px) {
   .header-top {
-    padding-top: 5px;
     padding-right: 210px;
   }
 }
