--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,35 +1,46 @@
 <div class="contact-wrapper">
   <section class="container contact-form">
     <form action="#" class="form-field">
-      <h2 class="contacn-form-title title">Онлайн-запись</h2>
-      <label for="" class="contact-form-field">
-        <input
-          class="contacts-input"
-          type="text"
-          name="name"
-          id="name"
-          minlength="2"
-          placeholder="Имя*"
-        />
-      </label>
-      <label for="" class="contact-form-field">
-        <input
-          class="contacts-input"
-          type="tel"
-          name="tel"
-          id="tel"
-          pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-          placeholder="Телефон*"
-        />
-      </label>
-      <label for="" class="contact-form-field">
+      <h2 class="contact-form-title title">Онлайн-запись</h2>
+      <div class="contact-input-wrapper">
+        <div class="contacts-input-wrapper">
+          <label for="" class="contact-form-field"
+            ><span class="contact-form-field-item">Имя*</span>
+            <input
+              class="contacts-input"
+              type="text"
+              name="name"
+              id="name"
+              minlength="2"
+              placeholder=""
+            />
+          </label>
+        </div>
+
+        <div class="contacts-input-wrapper">
+          <label for="" class="contact-form-field"
+            ><span class="contact-form-field-item">Телефон*</span>
+            <input
+              class="contacts-input"
+              type="tel"
+              name="tel"
+              id="tel"
+              pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+              placeholder=""
+            />
+          </label>
+        </div>
+      </div>
+
+      <label for="" class="contact-form-field"
+        ><span class="contact-form-field-item">сообщение</span>
         <textarea
           class="contacts-input contacts-input-message"
           name=""
           id=""
           cols=""
           rows=""
-          placeholder="сообщение"
+          placeholder=""
         ></textarea>
       </label>
       <button class="send-button" type="submit">отправить</button>
@@ -38,39 +49,41 @@
 
   <section class="container contact-info">
     <h2 class="contact-info-title title">Контакты</h2>
-    <address class="contact-info-addres address">
-      <ul class="contact-list">
-        <li class="contact-list-item list">
-          <a class="contact-list-link link" href="">
-            <svg class="contact-icon contact-list-icon-map-pin">
-              <use href="./images/sprite.svg/#icon-map-pin"></use>
-            </svg>
-            ул. Васильковая, 7А, Киев, 08132</a
-          >
-        </li>
+    <div class="container-contact-info">
+      <div class="contact-info-addres-wraper">
+        <address class="contact-info-addres address">
+          <ul class="contact-list">
+            <li class="contact-list-item list">
+              <a class="contact-list-link link" href="">
+                <svg class="contact-icon contact-list-icon-map-pin">
+                  <use href="./images/sprite.svg/#icon-map-pin"></use></svg
+                >ул. Васильковая, 7А, Киев, 08132</a
+              >
+            </li>
 
-        <li class="contact-list-item list">
-          <a class="contact-list-link link" href="tel:+380441111111"
-            ><svg class="contact-icon">
-              <use href="./images/sprite.svg/#icon-phone"></use>
-            </svg>
-            +38 044 111 11 11
-          </a>
-        </li>
-        <li class="contact-list-item list">
-          <a class="contact-list-link" href="mailto:barbershop@email.com">
-            <svg class="contact-icon">
-              <use href="./images/sprite.svg/#icon-mail"></use>
-            </svg>
-            barbershop@email.com</a
-          >
-        </li>
-      </ul>
-    </address>
-
-    <div class="contact-date-wraper">
-      <p class="suptitle">время работы</p>
-      <p class="contact-date">Ежедневно с 9:00 до 22:00</p>
+            <li class="contact-list-item list">
+              <a class="contact-list-link link" href="tel:+380441111111"
+                ><svg class="contact-icon">
+                  <use href="./images/sprite.svg/#icon-phone"></use>
+                </svg>
+                +38 044 111 11 11
+              </a>
+            </li>
+            <li class="contact-list-item list">
+              <a class="contact-list-link" href="mailto:barbershop@email.com">
+                <svg class="contact-icon">
+                  <use href="./images/sprite.svg/#icon-mail"></use>
+                </svg>
+                barbershop@email.com</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
+      <div class="contact-date-wraper">
+        <p class="suptitle">время работы</p>
+        <p class="contact-date">Ежедневно с 9:00 до 22:00</p>
+      </div>
     </div>
   </section>
 </div>
