--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,3 +1,5 @@
+////       CONTACT FORM       ///////
+
 .contact-form {
   padding-top: 84px;
   padding-bottom: 84px;
@@ -7,72 +9,72 @@
   display: flex;
   flex-direction: column;
 }
-.contacn-form-title {
+
+.contact-form-title {
   color: #ffffff;
   text-align: center;
   margin-bottom: 44px;
 }
-// .contact-form-field {
-//   // font-weight: 600;
-//   // font-size: 11px;
-//   // line-height: 1.36;
-//   // letter-spacing: 0.1em;
-//   // text-transform: uppercase;
-//   // color: rgba(157, 164, 189, 0.4);
-// }
-
+.contact-input-wrapper {
+  position: relative;
+}
 .contacts-input {
+  position: relative;
   display: block;
   width: 100%;
   height: 24px;
-  fill: currentColor;
   background-color: transparent;
+  border: none;
+  border-bottom: 1px solid rgba(157, 164, 189, 0.4);
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 44px;
+  // outline: 1px solid red;
+  &::placeholder {
+    color: rgba(157, 164, 189, 0.4);
+  }
+  &:focus,
+  &:hover {
+    border-bottom-color: #ffffff;
+    outline: none;
+  }
+}
 
-  border: rgba(157, 164, 189, 0.4);
-  outline: 1px solid red;
+.contact-form-field-item {
+  position: absolute;
+  // // left: 0;
+  // top: 0;
   font-weight: 600;
   font-size: 11px;
   line-height: 1.36;
   letter-spacing: 0.1em;
   text-transform: uppercase;
   color: rgba(157, 164, 189, 0.4);
+
+  &:focus,
+  &:hover {
+    color: #ffffff;
+  }
 }
 
 .contacts-input-message {
   resize: none;
   height: 76px;
+  &:focus,
+  &:hover {
+    border-color: #ffffff;
+    outline: none;
+  }
 }
 
-// .modal-button {
-//   margin-left: auto;
-//   margin-right: auto;
-//   padding: 12px 20px;
-//   margin-top: 44px;
-//   border-radius: 25px;
-//   min-width: 160px;
-//   height: 40px;
-//   font-weight: 600;
-//   font-size: 12px;
-//   line-height: 1.33;
-//   letter-spacing: 0.09em;
-//   text-transform: uppercase;
-//   color: #ffffff;
-//   text-align: center;
-//   background-color: transparent;
-//   border: 1px solid #ff6c00;
-//   cursor: pointer;
-//   outline: none;
-
-//   &:hover,
-//   &:focus {
-//     background-color: var(--accent-color);
-//   }
-// }
 .send-button {
   margin-left: auto;
   margin-right: auto;
   padding: 12px 20px;
-  margin-top: 44px;
   border-radius: 25px;
   min-width: 160px;
   height: 40px;
@@ -93,6 +95,9 @@
     background-color: var(--accent-color);
   }
 }
+
+/////////     CONTACT INFO    ////////
+
 .contact-info {
   padding-top: 84px;
   padding-bottom: 84px;
@@ -100,10 +105,16 @@
   background-image: url('../images/contacts/contacts-bg.png');
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
 }
-.contact-info-addres {
-  margin-bottom: 44px;
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .contact-info {
+    background-image: url('../images/contacts/contacts-bg@2x.png');
+  }
 }
+
 .contact-info-title {
   color: #ffffff;
   text-align: center;
@@ -139,15 +150,17 @@
   letter-spacing: 0.1em;
   text-transform: uppercase;
   color: #ffffff;
+  margin-top: 44px;
   margin-bottom: 20px;
-}
-.suptitle::before {
-  display: inline-block;
-  content: '';
-  width: 60px;
-  height: 1px;
-  background: rgba(157, 164, 189, 0.4);
-  margin-right: 20px;
+
+  &::before {
+    display: inline-block;
+    content: '';
+    width: 60px;
+    height: 1px;
+    background: rgba(157, 164, 189, 0.4);
+    margin-right: 20px;
+  }
 }
 
 .contact-icon {
@@ -155,21 +168,70 @@
   width: 24px;
   height: 24px;
   margin-right: 20px;
-}
-
-.contact-list-icon-map-pin {
-  align-self: flex-start;
-  margin-top: 6px;
+  vertical-align: text-top;
 }
 
 @media screen and (min-width: 768px) {
+  .contact-form-title {
+    text-align: left;
+  }
+  .contact-input-wrapper {
+    display: flex;
+  }
+  .contacts-input-wrapper {
+    width: 330px;
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+  .contact-form {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+  .contact-info {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
   .contact-info-title {
     text-align: left;
   }
+  .send-button {
+    margin-left: 0;
+  }
+  .contact-list {
+    max-width: 260px;
+  }
+  .contact-info {
+    background-image: url('../images/contacts/contacts-tablet-bg.png');
+  }
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .contact-info {
+      background-image: url('../images/contacts/contacts-tablet-bg@2x.png');
+    }
+  }
+  .suptitle {
+    margin-top: 0;
+  }
+  .container-contact-info {
+    display: flex;
+  }
+  .contact-info-addres-wraper {
+    width: 50%;
+  }
+  .contact-date-wraper {
+    width: 50%;
+  }
 }
+
 @media screen and (min-width: 1200px) {
   .contact-wrapper {
     display: flex;
+  }
+  .container-contact-info {
+    display: block;
   }
   .contact-form,
   .contact-info {
@@ -178,36 +240,63 @@
     width: 50%;
   }
 
-  .form-field {
-    // flex-direction: row;
-    // flex-wrap: wrap;
-  }
-
   .contacts-input + .contacts-input {
     margin-right: 30px;
-  }
-
-  .send-button {
-    margin-left: 0;
   }
 
   .contact-list-link {
     display: flex;
     align-items: center;
   }
-  .contact-list {
-    max-width: 260px;
-  }
+
   .contact-info {
+    background-image: url('../images/contacts/contacts-desktop-bg.png');
     padding-left: 100px;
+  }
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .contact-info {
+      background-image: url('../images/contacts/contacts-desktop-bg@2x.png');
+    }
+  }
+  .suptitle {
+    margin-top: 44px;
   }
   .contact-form {
     padding-left: 56px;
   }
-  .contacn-form-title {
-    text-align: left;
-  }
-  .contacts-input-message {
-    margin-top: 44px;
+
+  .contact-list-icon-map-pin {
+    align-self: flex-start;
+    margin-top: 6px;
   }
 }
+
+////////        MODAL BUTTON      ///////
+
+// .modal-button {
+//   margin-left: auto;
+//   margin-right: auto;
+//   padding: 12px 20px;
+//   margin-top: 44px;
+//   border-radius: 25px;
+//   min-width: 160px;
+//   height: 40px;
+//   font-weight: 600;
+//   font-size: 12px;
+//   line-height: 1.33;
+//   letter-spacing: 0.09em;
+//   text-transform: uppercase;
+//   color: #ffffff;
+//   text-align: center;
+//   background-color: transparent;
+//   border: 1px solid #ff6c00;
+//   cursor: pointer;
+//   outline: none;
+
+//   &:hover,
+//   &:focus {
+//     background-color: var(--accent-color);
+//   }
+// }
