--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -125,6 +125,8 @@
   margin-bottom: 20px;
 }
 .contact-list-link {
+  display: flex;
+  align-items: center;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -212,6 +214,10 @@
       background-image: url('../images/contacts/contacts-tablet-bg@2x.png');
     }
   }
+  .contact-list-icon-map-pin {
+    align-self: flex-start;
+    margin-top: 4px;
+  }
   .suptitle {
     margin-top: 0;
   }
@@ -298,5 +304,13 @@
 //   &:hover,
 //   &:focus {
 //     background-color: var(--accent-color);
+//   }
+// }
+
+// .modal-button-white {
+//   color: #303030;
+//   &:hover,
+//   &:focus {
+//     color: #ffffff;
 //   }
 // }
