задали правильные падинги

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,6 +1,6 @@
 <section class="gallery section">
     <div class="container">
-        <p class="suptitle">На латинском языке “барба” означает “борода”</p>
+        <p class="suptitle gallery-suptitle">На латинском языке “барба” означает “борода”</p>
         <ul class="gallery-list list">
             <li class="gallery-list-item">
                 <picture>
